src/snapshots/avro_rust_codegen__parser__parser_on_all_schemas@04_nested_records.avsc.snap
---
source: src/parser.rs
expression: ir_as_json
input_file: src/test_schemas/04_nested_records.avsc
---
{
  "com.example.nested.Customer": {
    "Record": {
      "name": "com.example.nested.Customer",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "customer_id",
            "doc": null,
            "ty": "Long",
            "default": null
          },
          {
            "name": "email",
            "doc": null,
            "ty": "String",
            "default": null
          }
        ]
      }
    }
  },
  "com.example.nested.Order": {
    "Record": {
      "name": "com.example.nested.Order",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "order_id",
            "doc": null,
            "ty": "Long",
            "default": null
          },
          {
            "name": "customer",
            "doc": null,
            "ty": {
              "Record": "com.example.nested.Customer"
            },
            "default": null
          },
          {
            "name": "shipping_address",
            "doc": null,
            "ty": "String",
            "default": null
          }
        ]
      }
    }
  }
}
