src/snapshots/avro_rust_codegen__parser__parser_on_all_schemas@06_namespaced_records.avsc.snap
---
source: src/parser.rs
expression: ir_as_json
input_file: src/test_schemas/06_namespaced_records.avsc
---
{
  "com.example.common.Address": {
    "Record": {
      "name": "com.example.common.Address",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "street",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "city",
            "doc": null,
            "ty": "String",
            "default": null
          }
        ]
      }
    }
  },
  "com.example.staff.Employee": {
    "Record": {
      "name": "com.example.staff.Employee",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "name",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "address",
            "doc": null,
            "ty": {
              "Record": "com.example.common.Address"
            },
            "default": null
          }
        ]
      }
    }
  }
}
