src/snapshots/avro_rust_codegen__parser__parser_on_all_schemas@09_union_of_named_and_logical_types.avsc.snap
---
source: src/parser.rs
expression: ir_as_json
input_file: src/test_schemas/09_union_of_named_and_logical_types.avsc
---
{
  "com.example.EventMetadata": {
    "Record": {
      "name": "com.example.EventMetadata",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "source",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "timestamp",
            "doc": null,
            "ty": "TimestampMillis",
            "default": null
          }
        ]
      }
    }
  },
  "com.example.EventType": {
    "Enum": {
      "name": "com.example.EventType",
      "doc": null,
      "inner": {
        "symbols": [
          "LOGIN",
          "LOGOUT",
          "PURCHASE",
          "VIEW"
        ]
      }
    }
  },
  "com.example.UserActivity": {
    "Record": {
      "name": "com.example.UserActivity",
      "doc": null,
      "inner": {
        "fields": [
          {
            "name": "userId",
            "doc": null,
            "ty": "String",
            "default": null
          },
          {
            "name": "activityDetails",
            "doc": null,
            "ty": {
              "Union": [
                "Null",
                "String",
                "Int",
                {
                  "Record": "com.example.EventMetadata"
                },
                {
                  "Enum": "com.example.EventType"
                },
                "TimestampMicros"
              ]
            },
            "default": null
          }
        ]
      }
    }
  }
}
